[project]
name = "mcpscrapingtutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=0.3.12",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.1",
    "python-dotenv>=1.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.34.2",
]
